<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashScreen">

    <fragment
        android:id="@+id/splashScreen"
        android:name="com.nokey.vtmcompanion.SplashScreenFragment"
        android:label=" "
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreen_to_chooseClan"
            app:destination="@id/char_creation_graph"
            app:exitAnim="@anim/fragment_fade_exit" />

        <action
            android:id="@+id/action_splashScreen_characterSheet"
            app:destination="@id/character_graph"/>
    </fragment>

    <navigation
        android:id="@+id/char_creation_graph"
        app:startDestination="@id/chooseClan">

        <fragment
            android:id="@+id/chooseClan"
            android:name="com.nokey.vtmcompanion.charcreator.ChooseClanFragment"
            android:label="@string/create_character_clan_selection"
            tools:layout="@layout/fragment_choose_clan">
            <action
                android:id="@+id/action_chooseClan_to_nameSire"
                app:destination="@id/nameSire" />
        </fragment>

        <fragment
            android:id="@+id/nameSire"
            android:name="com.nokey.vtmcompanion.charcreator.NameSireFragment"
            android:label="@string/create_character_names_title"
            tools:layout="@layout/fragment_name_sire">
            <action
                android:id="@+id/action_nameSire_to_attributeAssignment"
                app:destination="@id/attributeAssignment" />
        </fragment>

        <fragment
            android:id="@+id/attributeAssignment"
            android:name="com.nokey.vtmcompanion.charcreator.AttributesAssignmentFragment"
            android:label="@string/create_character_attribute_selection"
            tools:layout="@layout/fragment_attributes_assignment">
            <action
                android:id="@+id/action_attributeAssignment_to_skillAssignment"
                app:destination="@id/skillAssignment" />
        </fragment>

        <fragment
            android:id="@+id/skillAssignment"
            android:name="com.nokey.vtmcompanion.charcreator.ChooseSkillsFragment"
            android:label="@string/create_character_skill_selection"
            tools:layout="@layout/fragment_choose_skills">
            <action
                android:id="@+id/action_skillAssignment_disciplineSelection"
                app:destination="@id/disciplineSelection" />
        </fragment>

        <fragment
            android:id="@+id/disciplineSelection"
            android:label="@string/create_character_discipline_selection"
            android:name="com.nokey.vtmcompanion.charcreator.DisciplineSelectionFragment"
            tools:layout="@layout/fragment_discipline_selection">
            <action
                android:id="@+id/action_disciplineSelection_characterSheet"
                app:destination="@id/character_graph"/>
        </fragment>
    </navigation>

    <navigation
        android:id="@+id/character_graph"
        app:startDestination="@+id/character_sheet">

        <fragment
            android:id="@+id/character_sheet"
            android:name="com.nokey.vtmcompanion.charsheet.CharacterSheetFragment"
            android:label=" "
            tools:layout="@layout/fragment_character_sheet" />

    </navigation>
</navigation>
